--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div id="sliders" class="sliders"></div>
 
-      <!-- Minor-mod selector (only control under sliders) -->
+      <!-- Minor-mod selector -->
       <div class="modsCtrl">
         <label for="minorModsSelect">Minor Stat Mods:</label>
         <select id="minorModsSelect">
