Added Custom Exotic

--- a/index.html
+++ b/index.html
@@ -35,18 +35,15 @@
         <span class="subtle hint">Replaces Major Mods with Minor Mods.</span>
       </div>
 
-      <datalist id="ticks">
-        <option value="0"></option>
-        <option value="50"></option>
-        <option value="100"></option>
-        <option value="150"></option>
-        <option value="200"></option>
-      </datalist>
+      <!-- ticks for target sliders (every 5) -->
+      <datalist id="ticks"></datalist>
+      <!-- ticks for fragment sliders (every 5 from -30 to +30) -->
+      <datalist id="fragTicks"></datalist>
     </section>
 
     <section class="panel">
       <h2>Recommended Composition</h2>
-      <p class="subtle">Armor Comp needed for stats.</p>
+      <p class="subtle">Armor comp needed for stats.</p>
 
       <div class="slot">
         <h3>Summary</h3>
@@ -65,8 +62,7 @@
     </section>
   </main>
 
-  <footer class="container footer">
-  </footer>
+  <footer class="container footer"></footer>
 
   <script src="script.js"></script>
 </body>
