Updated Main Side Description to make it more clear how the program creates its results

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="container">
     <h1>Destiny Armor Calculator</h1>
     <p class="subtle">
-      Targets are minimums. Assumes 1 Exotic. Can adjust for Fragments, Tuning Mods, and Minor Mods.
+      Targets are minimums. Assumes 1 T2 Exotic. Assumes all T5 Legendary armor OR Max Stat T4 armor. Can adjust for Fragments, Tuning Mods, and Minor Mods.
     </p>
   </header>
 
