--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="panel">
       <h2>Recommended Composition</h2>
-      <p class="subtle">Armor comp needed for stats.</p>
+      <p class="subtle">- Armor comp needed for stats.<br>- Tertiaries, Minor Mods, Major Mods, and ±5 Tuning Mods can be placed on different armor types when applicable.<br>- Balanced Tuning Mods must be placed on listed armor type.</p>
 
       <div class="slot">
         <h3>Summary</h3>
