--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Destiny Armor Calculator</title>
+  <title>D2 Armor Calc — Destiny 2 Armor Calculator</title>
+  <meta name="description" content="Free Destiny 2 Armor Calculator (D2 Armor Calc). Optimize stats, mods, and builds easily with this community tool." />
+  <link rel="canonical" href="https://d2-armor-calc-lac.vercel.app/" />
+  <meta name="google-site-verification" content="IYGpkCeu-gQTTykxSil6Y0D7kSJgeIQLoQSXld5oINo" />
+
+  <!-- Open Graph for social previews -->
+  <meta property="og:title" content="D2 Armor Calc — Destiny 2 Armor Calculator" />
+  <meta property="og:description" content="Free D2 Armor Calc for Destiny 2. Optimize stats, mods, and armor setups fast." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://d2-armor-calc-lac.vercel.app/" />
+  <meta property="og:image" content="https://d2-armor-calc-lac.vercel.app/og-image.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="D2 Armor Calc — Destiny 2 Armor Calculator" />
+  <meta name="twitter:description" content="Free Destiny 2 Armor Calculator. Optimize stats, mods, and builds quickly." />
+  <meta name="twitter:image" content="https://d2-armor-calc-lac.vercel.app/og-image.png" />
+
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header class="container">
-    <h1>Destiny Armor Calculator</h1>
+    <h1>Destiny 2 Armor Calculator</h1>
     <p class="subtle">
       Targets are minimums. Assumes 1 T2 Exotic. Assumes all T5 Legendary armor OR Max Stat T4 armor. Can adjust for Fragments, Tuning Mods, and Minor Mods.
     </p>
