added sitemap txt and updated related files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <header class="container">
-    <h1>Destiny 2 Armor Calculator</h1>
+    <h1>Destiny 2 Armor Calculator (D2 Armor Calc)</h1>
     <p class="subtle">
       Targets are minimums. Assumes 1 T2 Exotic. Assumes all T5 Legendary armor OR Max Stat T4 armor. Can adjust for Fragments, Tuning Mods, and Minor Mods.
     </p>
