minor spacing adjustment for text in html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2>Recommended Composition</h2>
                 <p class="subtle">
                     - Armor comp needed for stats.<br />- Tertiaries, Minor
-                    Mods, Major Mods, and ±5 Tuning Mods can be placed on
+                    Mods, Major Mods, and ±5 Tuning Mods <br />&nbsp;&nbsp;&nbsp;can be placed on
                     different armor types when applicable.<br />- Balanced
                     Tuning Mods must be placed on listed armor type.
                 </p>
